# music-player

./: README.md  index.html  package.json  pnpm-lock.yaml
.fleet/: run.json  settings.json
app/: package-lock.json  package.json  pnpm-lock.yaml
app/.fleet/: run.json
app/src/: App.tsx  main.tsx
app/src-tauri/: Cargo.toml  links.txt  tauri.conf.json
app/src-tauri/src/: commands.rs  main.rs  music.rs  player.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  links.txt
src-tauri/src/: main.rs
